--- a/src/themes/JMetro/form/Button.css
+++ b/src/themes/JMetro/form/Button.css
@@ -13,7 +13,9 @@
 }
 .tundra .dijitButtonText {
 	text-align: center;
-	padding: 0 0.3em;
+	padding: 0 0.3em 2px;
+    height: 16px;
+    vertical-align: top;
 }
 
 .tundra .dijitDisabled .dijitButtonText {
