--- a/src/themes/JMetro/form/Common.css
+++ b/src/themes/JMetro/form/Common.css
@@ -24,9 +24,9 @@
 		For TextBox, ComboBox, Spinner: the div that contains the input.
 		Otherwise the actual input element.
 	*/
-	background:#fff url("../images/validationInputBg.png") repeat-x top left;
-	#background:#fff url('../images/validationInputBg.gif') repeat-x top left;
-	border:1px solid #b3b3b3;
+	background: none;
+	#background: none;
+	border: none;
 }
 
 /* ComboBox specific rules*/
